client/src/style.css
body {
    background-color: #C7C7C7;
    font-family: 'Oswald', sans-serif;
    margin: 0;
    padding: 0;
    justify-content: center;
    align-items: center;
    min-height: 100vh;    
}

/*NAVIGATION*/
.Hero {
    padding: 0px 15px 0px 15px;
    font-family: 'Wallpoet', cursive;
    font-size: 2em;
}

.ltgray:hover {
    background-color: #696969;
    color: #2e2e6e !important;
    font-weight: 900;
}

.navbar{
    border-bottom: solid 1px #D3D3D3;
    background-color: #2e2e6e;
    color: #ededed;
    width: 100%;
    font-size: 1.5em;
}

.toggle {
    background-color: #84818d!important;
    border:solid 1px white;
}

/*CUSTOM CLASSES*/
.bold {
    font-weight: 900;
    font-family: 'Oswald', sans-serif;
    font-size: 1.6em;
}

.bmarg {
    margin-bottom: 20px;
}

.ltgray {
    color: #ededed !important;
    
}

.infoDiv {
    width: 75%;
}

.Button {
    background-color: #2E2E6E;
    border: #696969;
    color: #EDEDED;
    margin-left: 4px;
    font-size: 1em;
}
  
.Button:hover {
    background-color: #696969;
    color: #2e2e6e;
    font-weight: 900;
  }

/*DASHBOARD*/
/*welcome div*/
.intro {
    margin-top: 2%;
    font-family: 'Roboto', sans-serif !important;
}


.editBtn {
    float: right;
    margin-top: 25%;
    margin-right: 10%;
    background-color: #2E2E6E;
    border: #696969;
    color: #EDEDED;
    font-size: 1.3em;
    padding: 10px 20px 10px 20px;
    font-family: 'Oswald', sans-serif;
}



.editBtn:hover {
background-color: #696969;
color: #2e2e6e;
}

/*employee info div*/
.userInfo{
    margin-top: 30px;
    padding: 30px 0px 20px 0px;
    font-size: 1.2em;
}
.employee {
    padding: 30px !important;

}

.employeeContainer {
    margin-top: -40px;
}


/*LOGGED IN, LOGGED OUT, NOT AUTHORIZED*/
.loggedUser{
    margin-right: 10px;
    margin-left: 15px;
}

.loginBox, .notAuthorized {
    padding: 15px;
    margin-top: 3%;
}

.notAuthorized {
    text-align: center;
    font-weight: bold;
}

/*GENERAL STYLE DIVS*/
.employee, .intro, .loginBox , .notAuthorized{
    background-color: #ededed;
    padding: 10px;
    font-family: 'Raleway', sans-serif;
    box-shadow: 5px 5px 5px #696969;
    border-radius: 5px;
    border: 1px #FFFFFF solid;
    font-size: 1em;
}

footer {
    position: fixed;
    left:0;
    bottom: 0;
    width: 100%;
    background-color: #2e2e6e;
    color: #D3D3D3;
    font-family: 'Wallpoet', cursive;
}

